src_files += files(
    'abstract_slider.hpp',
    'button.hpp',
    'color_picker.cpp',
    'color_picker.hpp',
    'image_button.cpp',
    'image_button.hpp',
    'image_view.cpp',
    'image_view.hpp',
    'label.cpp',
    'label.hpp',
    'link_label.cpp',
    'link_label.hpp',
    'slider.cpp',
    'slider.hpp',
    'text_button.cpp',
    'text_button.hpp',
    'textinput.cpp',
    'textinput.hpp',
)
